feat: recommended courses now work with favourite courses